# VFX2017

hw1/: Makefile  README.md  curve.txt  curveB.txt  curveG.txt  curveR.txt  debevec.cpp  debevec.hpp  hdr.cpp  hdr.py  main  main.cpp  makefile  mtb.cpp  mtb.hpp
hw1/report/: Makefile  hdr-imaging.tex  hw1.aux  hw1.bib  hw1.tex  hw1.xdv  image-alignment.tex  subsection-blob-removal.tex  subsection-ghost-removal.tex  subsection-image-alignment.tex  subsection-spotlighting.tex  tone-mapping.tex
hw1/report/data/: curveB_0.5.txt  curveB_5.txt  curveB_50.txt  curveG.txt  curveG_0.5.txt  curveG_50.txt  curveR.txt  curveR_0.5.txt  curveR_5.txt  curveR_50.txt
hw1/result/: out.hdr
hw1/src/: blob_tune.cpp  hdr.cpp  hdr.hpp  main.cpp  mtb.cpp  mtb.hpp  tonemap.cpp  tonemap.hpp  util.cpp  util.hpp
hw1/test_pics/: file_list
hw1/test_pics1/: input.txt
hw1/test_pics2/: ResponceCurve_B.txt  ResponceCurve_G.txt  ResponceCurve_R.txt  input.txt  sample.txt  tmp_input.txt  tonemap_parameter.txt
hw2/: CMakeLists.txt  README.md  input_images.txt
hw2/report/: Makefile  hw2.bib  hw2.tex
hw2/src/: blending.cpp  blending.hpp  detection.cpp  detection.hpp  main.cpp  matching.cpp  matching.hpp  msop.cpp  msop.hpp  mytype.hpp  panorama.cpp  panorama.hpp  projection.cpp  projection.hpp  sift.cpp  sift.hpp  stitching.cpp  stitching.hpp  type.hpp  util.cpp  util.hpp
hw3/report/: Makefile  hw3.bib  hw3.tex
